--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rss = { version = "2.0", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "signal"] }
+encoding_rs = "0.8.31"
 
 [profile.release]
 # Enable all optimizations
